--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,9 @@
     background: radial-gradient(circle, rgba(244, 148, 216, 1) 8%, rgba(134, 225, 232, 1) 78%);
 }
 
+.footercol{
+    background: rgba(18, 194, 206, 0.77) 78%;
+}
 .join-b {
     /* position: absolute; */
     top: 0;
