--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,7 @@ html {
 .card p {
     height: 95%;
     flex: 1;
-    overflow: hidden;
+    /* overflow: hidden; */
     cursor: pointer;
     border-radius: 2px;
     transition: all .5s;
@@ -178,6 +178,7 @@ html {
     height: 50px;
     width: 200px;
     margin-left: 100px;
+    padding: 10px;
 }
 
 .card2::before,
@@ -233,13 +234,16 @@ html {
     height: 100%;
     color: whitesmoke;
     font-family: 'Fira Mono', monospace;
-    font-size: 24px;
+    font-size: 24px; 
     font-weight: 700;
     opacity: 1;
     transition: opacity 0.25s;
     z-index: 2;
+     padding:4px;
 }
-
+/* .card2 span div{
+  height: ;
+} */
 .card2 .social-link {
     position: relative;
     display: flex;
@@ -284,7 +288,7 @@ html {
 .cardabout {
     position: relative;
     width: 475px;
-    height: 625px;
+    height: auto;
     background-color: #2db3c2;
     border-radius: 6px;
     display: inline-block;
