--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
     background: rgb(244, 148, 216);
     background: radial-gradient(circle, rgba(244, 148, 216, 1) 8%, rgba(134, 225, 232, 1) 78%);
     background-image: url(bghome.jpeg);
+    background-size: cover;
     height: 100%;
 
   /* Center and scale the image nicely */
