--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
 .main-sec {
-    /* background-image: url("./assets/bgfin.jpg"); */
-    background-size: stretch;
+  /* background-image: url("./assets/bgfin.jpg"); */
+  background-size: stretch;
 }
 
 .main-txt {
-    backdrop-filter: blur(15px);
-    color: rgb(255, 255, 255);
-    width: auto;
-    box-shadow: 0px 0px 30px rgba(44, 60, 209, 0.37);
-    border: 2px solid rgba(255, 255, 255, 0.18);
+  backdrop-filter: blur(15px);
+  color: rgb(255, 255, 255);
+  width: auto;
+  box-shadow: 0px 0px 30px rgba(44, 60, 209, 0.37);
+  border: 2px solid rgba(255, 255, 255, 0.18);
 }
 
 .bggrad {
-    background: rgb(244, 148, 216);
-    background: radial-gradient(circle, rgba(244, 148, 216, 1) 8%, rgba(134, 225, 232, 1) 78%);
-    background-image: url(bghome.jpeg);
-    background-size: cover;
-    height: 100%;
+  background: rgb(244, 148, 216);
+  background: radial-gradient(circle, rgba(244, 148, 216, 1) 8%, rgba(134, 225, 232, 1) 78%);
+  background-image: url(bghome.jpeg);
+  background-size: cover;
+  height: 100%;
 
   /* Center and scale the image nicely */
   background-position: center;
@@ -25,338 +26,345 @@
   background-size: cover;
 }
 
-.footercol{
-    background: rgba(18, 194, 206, 0.77) 78%;
+.footercol {
+  background: rgba(18, 194, 206, 0.77) 78%;
 }
+
 .join-b {
-    /* position: absolute; */
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    border: 5px solid rgba(255, 255, 255, 0.279);
-    /* Semi-transparent white border */
-    border-radius: 15px;
-    /* Rounded corners */
-    backdrop-filter: blur(2px);
-    /* Blur effect */
-    /* pointer-events: none; */
-    /* Allows interactions with elements behind it */
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 5px solid rgba(255, 255, 255, 0.279);
+  /* Semi-transparent white border */
+  border-radius: 15px;
+  /* Rounded corners */
+  backdrop-filter: blur(2px);
+  /* Blur effect */
+  /* pointer-events: none; */
+  /* Allows interactions with elements behind it */
 }
 
 .footer1 {
-    background-color: #333;
-    color: white;
-    padding: 20px;
-    text-align: center;
+  background-color: #333;
+  color: white;
+  padding: 20px;
+  text-align: center;
 }
 
 .footerdiv {
-    max-width: 1000px;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  max-width: 1000px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .nav-bar {
-    margin-top: 15px;
-    margin-left: 20px;
-    margin-right: 20px;
-    backdrop-filter: blur(5px);
-    box-shadow: 0px 0px 30px rgba(227, 228, 237, 0.537);
-    border: 2px solid rgba(255, 255, 255, 0.18);
+  margin-top: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
+  backdrop-filter: blur(5px);
+  box-shadow: 0px 0px 30px rgba(227, 228, 237, 0.537);
+  border: 2px solid rgba(255, 255, 255, 0.18);
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
+
 .navbutton {
-    padding: 1em 1em;
-    border: none;
-    border-radius: 5px;
-    font-weight: bold;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    cursor: pointer;
-    color: #073a43;
-    transition: all 1000ms;
-    font-size: 15px;
-    position: relative;
-    overflow: hidden;
-    outline: 2px solid #2c9caf;
-  }
-  .button_wotd{
-   border-radius: 100%;
-   border-color: #e7e7e7
-   border;
-  }
-  .navbutton:hover {
-    color: #ffffff;
-    transform: scale(1.1);
-    outline: 2px solid #70bdca;
-    box-shadow: 4px 5px 17px -4px #268391;
-  }
-  
-  .navbutton::before {
-    content: "";
-    position: absolute;
-    left: -50px;
-    top: 0;
-    width: 0;
-    height: 100%;
-    background-color: #2c9caf;
-    transform: skewX(45deg);
-    z-index: -1;
-    transition: width 1000ms;
-  }
-  
-  .navbutton:hover::before {
-    width: 250%;
-  }
-  .card {
-    width: 2000px;
-    height: 700px;
-    border-radius: 4px;
-    background: #047f8f;
-    display: flex;
-    gap: 5px;
-    padding: .4em;
-    /* margin-top: 100px; */
+  padding: 1em 1em;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: #073a43;
+  transition: all 1000ms;
+  font-size: 15px;
+  position: relative;
+  overflow: hidden;
+  outline: 2px solid #2c9caf;
+}
+
+.button_wotd {
+  border-radius: 100%;
+  border-color: #e7e7e7 border;
+}
+
+.navbutton:hover {
+  color: #ffffff;
+  transform: scale(1.1);
+  outline: 2px solid #70bdca;
+  box-shadow: 4px 5px 17px -4px #268391;
+}
+
+.navbutton::before {
+  content: "";
+  position: absolute;
+  left: -50px;
+  top: 0;
+  width: 0;
+  height: 100%;
+  background-color: #2c9caf;
+  transform: skewX(45deg);
+  z-index: -1;
+  transition: width 1000ms;
+}
+
+.navbutton:hover::before {
+  width: 250%;
+}
+
+.card {
+  width: 1515px;
+  height: 700px;
+  border-radius: 4px;
+  background: #047f8f;
+  display: flex;
+  gap: 5px;
+  padding: .4em;
+  /* margin-top: 100px; */
 }
 
 .card p {
-    height: 95%;
-    flex: 1;
-    /* overflow: hidden; */
-    cursor: pointer;
-    border-radius: 2px;
-    transition: all .5s;
-    background: #ed8c99;
-    border: 1px solid #ff5a91;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 95%;
+  flex: 1;
+  /* overflow: hidden; */
+  cursor: pointer;
+  border-radius: 2px;
+  transition: all .5s;
+  background: #ed8c99;
+  border: 1px solid #ff5a91;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card p:hover {
-    flex: 4;
+  flex: 4;
 }
 
 .card p span {
-    min-width: 14em;
-    padding: .5em;
-    text-align: center;
-    transform: rotate(-90deg);
-    transition: all .5s;
-    text-transform: uppercase;
-    color: #047f8f;
-    letter-spacing: .1em;
+  min-width: 14em;
+  padding: .5em;
+  text-align: center;
+  transform: rotate(-90deg);
+  transition: all .5s;
+  text-transform: uppercase;
+  color: #047f8f;
+  letter-spacing: .1em;
 }
 
 .card p:hover span {
-    transform: rotate(0);
+  transform: rotate(0);
 }
-.bgpic
-{   
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url(blogbgpic.jpg);
+
+.bgpic {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(blogbgpic.jpg);
 }
+
 .card svg {
-    height: 25px;
+  height: 25px;
 }
 
 .card2 {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    background: #e7e7e7;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-    overflow: hidden;
-    height: 50px;
-    width: 200px;
-    margin-left: 100px;
-    padding: 10px;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: #e7e7e7;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  overflow: hidden;
+  height: 50px;
+  width: 200px;
+  margin-left: 100px;
+  padding: 10px;
 }
 
 .card2::before,
 .card2::after {
-    position: absolute;
-    display: inline-flex;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-    transition: 0.25s linear;
-    z-index: 1;
+  position: absolute;
+  display: inline-flex;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  transition: 0.25s linear;
+  z-index: 1;
 }
 
 .card2::before {
-    content: "";
-    left: 0;
-    justify-content: flex-end;
-    background-color: #089caf;
+  content: "";
+  left: 0;
+  justify-content: flex-end;
+  background-color: #089caf;
 }
 
 .card2::after {
-    content: "";
-    right: 0;
-    justify-content: flex-start;
-    background-color: #047f8f;
+  content: "";
+  right: 0;
+  justify-content: flex-start;
+  background-color: #047f8f;
 }
 
 .card2:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .card2:hover span {
-    opacity: 0;
-    z-index: -3;
+  opacity: 0;
+  z-index: -3;
 }
 
 .card2:hover::before {
-    opacity: 0.5;
-    transform: translateY(-100%);
+  opacity: 0.5;
+  transform: translateY(-100%);
 }
 
 .card2:hover::after {
-    opacity: 0.5;
-    transform: translateY(100%);
+  opacity: 0.5;
+  transform: translateY(100%);
 }
 
 .card2 span {
-    position: absolute;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    color: whitesmoke;
-    font-family: 'Fira Mono', monospace;
-    font-size: 24px; 
-    font-weight: 700;
-    opacity: 1;
-    transition: opacity 0.25s;
-    z-index: 2;
-     padding:4px;
+  position: absolute;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: whitesmoke;
+  font-family: 'Fira Mono', monospace;
+  font-size: 24px;
+  font-weight: 700;
+  opacity: 1;
+  transition: opacity 0.25s;
+  z-index: 2;
+  padding: 4px;
 }
+
 /* .card2 span div{
   height: ;
 } */
 .card2 .social-link {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 25%;
-    height: 100%;
-    color: whitesmoke;
-    font-size: 24px;
-    text-decoration: none;
-    transition: 0.25s;
-    border: 50px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
+  height: 100%;
+  color: whitesmoke;
+  font-size: 24px;
+  text-decoration: none;
+  transition: 0.25s;
+  border: 50px;
 }
 
 .card2 .social-link svg {
-    text-shadow: 1px 1px rgba(31, 74, 121, 0.7);
-    transform: scale(1);
+  text-shadow: 1px 1px rgba(31, 74, 121, 0.7);
+  transform: scale(1);
 }
 
 .card2 .social-link:hover {
-    background-color: rgba(249, 244, 255, 0.774);
-    animation: bounce_613 0.4s linear;
+  background-color: rgba(249, 244, 255, 0.774);
+  animation: bounce_613 0.4s linear;
 }
 
 @keyframes bounce_613 {
-    40% {
-        transform: scale(1.4);
-    }
+  40% {
+    transform: scale(1.4);
+  }
 
-    60% {
-        transform: scale(0.8);
-    }
+  60% {
+    transform: scale(0.8);
+  }
 
-    80% {
-        transform: scale(1.2);
-    }
+  80% {
+    transform: scale(1.2);
+  }
 
-    100% {
-        transform: scale(1);
-    }
+  100% {
+    transform: scale(1);
+  }
 }
+
 .cardabout {
-    position: relative;
-    width: 475px;
-    height: auto;
-    background-color: #2db3c2;
-    border-radius: 6px;
-    display: inline-block;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    margin-left: 150px;
-    margin-top: 200px;
-    margin-bottom: 200px;
-    perspective: 1000px;
-    box-shadow: 0 0 0 25px #047f8f;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  position: relative;
+  width: 475px;
+  height: auto;
+  background-color: #2db3c2;
+  border-radius: 6px;
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  margin-left: 150px;
+  margin-top: 200px;
+  margin-bottom: 200px;
+  perspective: 1000px;
+  box-shadow: 0 0 0 25px #047f8f;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .cardabout img {
-    width: 600px;
-    fill: #333;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  width: 600px;
+  fill: #333;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .cardabout svg {
-    width: 600px;
-    fill: #333;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  width: 600px;
+  fill: #333;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .cardabout:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
 }
 
 .cardabout__content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: #ed8c99;
-    transform: rotateX(-90deg);
-    transform-origin: bottom;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #ed8c99;
+  transform: rotateX(-90deg);
+  transform-origin: bottom;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .cardabout:hover .cardabout__content {
-    transform: rotateX(0deg);
+  transform: rotateX(0deg);
 }
 
 .cardabout__title {
-    margin: 0;
-    font-size: 70px;
-    color: #047f8f;
-    font-weight: 700;
+  margin: 0;
+  font-size: 70px;
+  color: #047f8f;
+  font-weight: 700;
 }
 
 .cardabout:hover svg {
-    scale: 0;
+  scale: 0;
 }
 
 .cardabout__description {
-    margin: 10px 0 0;
-    font-size: 20px;
-    color: #08898b;
-    line-height: 1.4;
+  margin: 10px 0 0;
+  font-size: 20px;
+  color: #08898b;
+  line-height: 1.4;
 }
-  
+
 /* font and color palette */
 
 
@@ -366,11 +374,13 @@ html {
   --theme-two: #FFFFFF;
   --text: #697a79;
 }
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
+
 .bglogin {
   /* include a circle and a triangle elements through SVG shapes, and at either end of the page */
   background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g transform="scale(0.8 0.8) translate(5 5)"><circle cx="50" cy="50" r="50" fill="%23FBCD44"/></g></svg>'), url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><g transform="scale(0.8 0.8) translate(5 5)"><path d="M 0 80 l 100 -80 v 100 z" fill="%23E35E6A"/></g></svg>'), var(--bg);
@@ -384,6 +394,7 @@ html {
   justify-content: center;
   padding: 1rem 0; */
 }
+
 /* include the same shapes included in the background atop the content of the page, with a semi-translucent white
 this softens the color of the shapes, but most prominently shows the shapes as if continuing on the underlying content
 */
@@ -401,6 +412,107 @@ this softens the color of the shapes, but most prominently shows the shapes as i
   background-size: 300px, 380px; */
 }
 
+.blogpage {
+  padding: 20px;
+  width: 900px;
+  height: 900px;
+  min-height: 370px;
+  border-radius: 20px;
+  background: rgba(255, 214, 219, 0.033);
+  box-shadow: 5px 5px 8px #8ec6c8, -5px -5px 8px #7d9191;
+  transition: 0.4s;
+  align-self: center;
+  margin-left: 300px;
+  margin-top: 100px;
+}
+
+.blogpage:hover {
+  translate: 0 -10px;
+}
+
+.blogpage-title {
+  font-size: 48px;
+  font-weight: 600;
+  color: rgb(19 109 116);
+  margin: 15px 0 0 10px;
+}
+
+.blogpage div {
+  display: inline-block;
+}
+
+.blogpage-image {
+  /* height: 350px;
+  width: 500px; */
+  background-color: #313131;
+  border-radius: 15px;
+  background: #313131;
+  box-shadow: inset 5px 5px 3px #2f2f2f,
+    inset -5px -5px 3px #333333;
+}
+
+.blogpage-body {
+  margin: 13px 0 0 10px;
+  color: rgb(19 109 116);
+  font-size: 15px;
+}
+
+.blgpg1 {
+  background-image: url("./assets/blogbg/blogp1.jpg");
+  background-size: cover;
+}
+
+.blgpg2 {
+  background-image: url("./assets/blogbg/blogp2.jpg");
+  background-size: cover;
+}
+
+.blgpg3 {
+  background-image: url("./assets/blogbg/blogp3.jpg");
+  background-size: cover;
+}
+
+.blgpg4 {
+  background-image: url("./assets/blogbg/blogp4.jpg");
+  background-size: cover;
+}
+
+.blgpg5 {
+  background-image: url("./assets/blogbg/blogp5.jpg");
+  background-size: cover;
+}
+
+.blogfooter {
+  float: right;
+  margin: 28px 0 0 18px;
+  font-size: 13px;
+  color: #b3b3b3;
+}
+
+.by-name {
+  font-weight: 700;
+}
+
+#grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-column-gap: 2px;
+}
+
+/* .item
+{
+  border: 1px solid red;
+} */
+.item img {
+  height: 380px;
+  width: 490px;
+  background-size: contain;
+}
+
+#myElement:first-letter {
+  font-size: 2rem;
+}
+
 .App {
   /* cap the width of the main panel */
   margin-top: 100px;
@@ -416,6 +528,7 @@ this softens the color of the shapes, but most prominently shows the shapes as i
   /* display the halves side by side */
   display: flex;
 }
+
 /* for both panels
 display the content in a single column layout
 */
@@ -430,12 +543,14 @@ display the content in a single column layout
   overflow-x: hidden;
 
 }
+
 /* styles shared by the halves' elements */
 .Panel h2 {
   font-size: 1.9rem;
   text-transform: capitalize;
   margin-bottom: 1rem;
 }
+
 .Panel p {
   margin: 1rem 0;
   max-width: 25ch;
@@ -444,14 +559,18 @@ display the content in a single column layout
   font-weight: 300;
   text-align: center;
 }
-.Panel a, .Panel button {
+
+.Panel a,
+.Panel button {
   color: inherit;
   font-family: inherit;
 }
+
 .Panel a {
   text-decoration: none;
   margin: 1rem 1rem;
 }
+
 /* style the anchor links nesting the social platforms in a circle */
 .Panel .Social a {
   display: inline-block;
@@ -463,18 +582,21 @@ display the content in a single column layout
   border-radius: 50%;
   border: 1px solid currentColor;
 }
+
 /* on hover and on focus switch the color of the links making up the social icons */
 .Panel .Social a:hover,
 .Panel .Social a:focus {
   background: var(--text);
   color: var(--theme-two);
 }
+
 /* include a semi-transparent border at the bottom of the anchor link elements which are direct children of the parent
 this excludes the social icons */
-.Panel > a {
+.Panel>a {
   position: relative;
 }
-.Panel > a:after {
+
+.Panel>a:after {
   content: '';
   position: absolute;
   width: 100%;
@@ -483,11 +605,13 @@ this excludes the social icons */
   border-bottom: 1px dashed currentColor;
   opacity: 0.4;
 }
+
 /* display the input elements atop one another */
 .Panel form {
   display: flex;
   flex-direction: column;
 }
+
 /* widen the input elements to cover a sizeable portion of the panel */
 .Panel form input {
   margin: 0.5rem 0;
@@ -498,9 +622,11 @@ this excludes the social icons */
   color: inherit;
   font-family: inherit;
 }
+
 .Panel form input::placeholder {
   opacity: 0.8;
 }
+
 /* style the buttons to sign in/sign up to have considerable white space _around_ the text */
 .Panel button {
   background: none;
@@ -512,8 +638,9 @@ this excludes the social icons */
   font-size: 0.8rem;
   letter-spacing: 0.1rem;
 }
-.Panel button:hover{
-  box-shadow: 0 2px 5px -1px rgb(255, 255, 255), 0 0 30px -5px rgba(255,255,255);
+
+.Panel button:hover {
+  box-shadow: 0 2px 5px -1px rgb(255, 255, 255), 0 0 30px -5px rgba(255, 255, 255);
   /* box-shadow: 0 2px 5px -1px rgb(255, 255, 255), 0 0 30px -5px var(--text); */
 }
 
@@ -522,9 +649,10 @@ on smaller viewports position the panel atop one another
 expand the main panel to cover the entirety of the viewport
 */
 @media (max-width: 650px) {
-	body {
-		padding: 0;
-	}
+  body {
+    padding: 0;
+  }
+
   .App {
     flex-direction: column;
     border-radius: 0;
@@ -544,6 +672,7 @@ expand the main panel to cover the entirety of the viewport
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
+
 .FormPanel button {
   background: var(--theme);
   color: var(--theme-two);
