--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,72 @@
   box-shadow: 0px 0px 30px rgba(44, 60, 209, 0.37);
   border: 2px solid rgba(255, 255, 255, 0.18);
 }
+.btn {
+  width: 140px;
+  height: 50px;
+  background: #2c9caf linear-gradient(to top, #096170, #2c9caf, #28c4e0); 
+  color: #fff;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+}
 
+.btn span {
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: top 0.5s;
+}
+
+.btn-text-one {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.btn-text-two {
+  position: absolute;
+  width: 100%;
+  top: 150%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.btn:hover .btn-text-one {
+  top: -100%;
+}
+
+.btn:hover .btn-text-two {
+  top: 50%;
+}
+
+        .switch-container {
+            position: relative;
+            display: inline-block;
+            margin: 20px;
+            
+        }
+        .switch-content {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            margin-top: 10px;
+            padding: 10px;
+            border: 1px solid #075465;
+            background-color: rgb(213, 141, 141);
+            z-index: 1;
+        }
+
+        .switch-container:hover .switch-content {
+            display: block;
+        }
 .bggrad {
   background: rgb(244, 148, 216);
   background: radial-gradient(circle, rgba(244, 148, 216, 1) 8%, rgba(134, 225, 232, 1) 78%);
@@ -27,7 +92,8 @@
 }
 
 .footercol {
-  background: rgba(18, 194, 206, 0.77) 78%;
+  background: rgba(18, 194, 206, 0.77) 20%;
+
 }
 
 .txtmain {
