--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,9 @@
   background-color: rgb(213, 141, 141);
   z-index: 1;
 }
-
+.aboutbg{
+  background-image: url("./assets/aboutpics/aboutbg.jpeg")
+}
 .switch-container:hover .switch-content {
   display: block;
 }
@@ -139,19 +141,22 @@
 
 .outer-container {
   display: flex;
-  background-color: pink;
+  background-color: rgb(52 195 208 / 74%);
   /* flex-direction: column; */
+  border-radius: 20px;
   /* or row depending on your layout needs */
+  
   align-items: center;
   /* to center the items horizontally */
   justify-content: center;
   /* to center the items vertically */
   height: 300px;
   /* or any height constraint you need */
-  width: 100%;
+  width: 70%;
   /* or any width constraint you need */
   box-sizing: border-box;
   /* ensure padding and border are included in the element's total width and height */
+  margin-left: 150px;
 }
 
 .text-container,
@@ -159,8 +164,9 @@
   max-width: 100%;
   /* prevent stretching beyond the container width */
   max-height: 100%;
+  
   /* prevent stretching beyond the container height */
-  margin: 10px;
+  /* margin: 10px; */
   /* optional: space between elements */
   padding: 10px;
   /* optional: inner padding */
@@ -169,12 +175,20 @@
 }
 
 .text-container {
-  margin-left: 150px;
+  /* margin-right: 150px; */
   /* additional styles for the text container */
 }
 
 .blog-container {
   /* additional styles for the blog container */
+  height: 270px;
+  /* margin-left: 50px; */
+  /* width:270px; */
+}
+
+.moveimg{
+  height:270px;
+  width:270px;
 }
 
 .footer1 {
